[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AUTO-GMAI-GENERATION"
description = "AUTO CREATE mAIL"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["fake_useragent",
"fp",
"free_proxy",
"requests",
"selenium",
"selenium_wire",
"webdriver_manager"]
[project.urls]
Homepage = "https://github.com/Sz3RO/Auto-Mail-Genaration"
